﻿v0.5.0
* Fixed: Tank-Swap error spam when there's no stack info.
* Fixed: Person bubble for Matron, wasn't registering UnitID for the player.
* Fixed: Garua error report at the start of the fight. Gone.
* Notice: Personal Bubble for Sicaron will need a review, due to inconsistency in API debuff reporting.
----
v0.4.9
* Fixed: Major issue with timers that could start "silently" leaving redundant timers.
* Fixed: Turning the King Monitor off, actually does so now.
* Fixed: King's Monitor now remembers last settings.
* Fixed: Fixed an issue where filtered castbars would throw out timers completely.
* Fixed: Disabled castbars would also disable the timers and screen alerts.
* Change: Options window scrollers are now more responsive.
----
v0.4.8
* Fixed: TankSwap options should now work as intended.
* Fixed: Matron Zamira's Hideous Blast alert.
* Change: Minor adjustments to personal screen alerts engine.
* Change: Anchors should now appear above the options window when visible.
* Added: Sicaron: German Translation for Unholy Contract.
* Added: Akylios: German Translations for Tidal Waves.
* Added: Matron Zamira: German Translation for Mark of Oblivion.
* Added: Matron Zamira's Mark of Oblivion Timer.
* Added: Matron Zamira's Mark Of Oblivion personal screen alert (purple) ** experimental
----
v0.4.7
* New: Buff monitoring and triggers.
* New: Screen alerts now seperated by color sets.
* Fixed: Murdantix: Alert Timer option for Soul Trauma.
* Fixed: Say Type Triggers.
* Fixed: Alerts not closing if the encounter ends.
* Fixed: Tank-Swap Monitor was never actually triggering. Should be active now.
* Fixed: Issues when filtering Casts (currently only King fight).
* Added: Matron Zamira: French support for Hideous Blast.
* Added: Matron Zamira: Hideous Blast Screen alert now yellow.
* Added: Sicaron. Mechanic Timer for Unholy Contract.
* Added: Sicaron. Personal screen alert for Unholy Contract. ** experimental